# HoudiniPlugins

./: .gitignore  CMakeLists.txt  HoudiniPlugins.code-workspace  README.md  extra.bat  extra.sh  houdini.env
.buildSystem/linux/: build.sh  envVars.sh
.buildSystem/win/: build.bat  envVars.bat  runTest.bat
HDK_Samples/SOP_Flatten/: SOP_Flatten.C
HDK_Samples/SOP_Star/: CMakeLists.txt  SOP_Star.h
HDK_Samples/testStandaloneApplication/: build.bat  sphere.bgeo
HDK_Samples_Study/OBJ_Lamp/: CMakeLists.txt  OBJ_Lamp.C
HDK_Samples_Study/OBJ_Shake/: CMakeLists.txt  OBJ_Shake.C  OBJ_Shake.h
HDK_Samples_Study/OBJ_WorldAlign/: CMakeLists.txt  OBJ_WorldAlign.C  OBJ_WorldAlign.h
HDK_Samples_Study/SOP_CPPWave/: CMakeLists.txt  SOP_CPPWave.C  SOP_CPPWave.h
HDK_Samples_Study/SOP_DetailAttrib/: CMakeLists.txt  SOP_DetailAttrib.C  SOP_DetailAttrib.h
HDK_Samples_Study/SOP_Flatten/: CMakeLists.txt  SOP_Flatten.h
HDK_Samples_Study/SOP_HOMWave/: CMakeLists.txt  SOP_HOMWave.C  SOP_HOMWave.h  SOP_HOMWave.py  SOP_HOMWaveInlinecpp.py  SOP_HOMWaveNumpy.py  SOP_VEXWave.vfl
HDK_Samples_Study/SOP_PointWave/: CMakeLists.txt  SOP_PointWave.C  SOP_PointWave.h
HDK_Samples_Study/SOP_Star/: CMakeLists.txt  SOP_Star.C  SOP_Star.h  hdk_star.txt
HDK_Samples_Study/SOP_TimeCompare/: CMakeLists.txt  SOP_TimeCompare.C  SOP_TimeCompare.h
HDK_Samples_Study/testStandaloneApplication/: build.bat  main.cpp
MyPlugins/MObjEmpty/: CMakeLists.txt  MObjEmpty.cpp  MObjEmpty.h  main.cpp
MyPlugins/MObjFirst/: CMakeLists.txt  MObjFirst.cpp
MyPlugins/MSopFirst/: CMakeLists.txt  MSopFirst.cpp  MSopFirst.h  main.cpp
SOP_Flatten/: CMakeLists.txt  Readme.md  SOP_Flatten.C  build.bat
SOP_Star/: CMakeLists.txt  SOP_Star.C
firstPlugin/: Readme.md  main.cpp
load/help/nodes/sop/: hdk_flatten.txt
testStandaloneApplication/: build.bat  sphere.bgeo
